Phase 3: 暗号化データの復号テスト機能を実装。資産の可逆性を確認。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
-[package]
-name = "wp-rust-tool"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
+[workspace]
+members = [
+  "wp-rust-tool",
+  "remax-ish",
+]
+resolver = "2"
